--- a/index.css
+++ b/index.css
@@ -241,3 +241,39 @@ label {
 h1:has(+ p) {
     margin-bottom: 0;
 }
+
+input.invalid {
+  margin-bottom: 0px;
+    padding: 16px 18px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #f0f0f0;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 2px 6px 0 rgb(0 0 0 / 6%);
+    font-size: 16px;
+    line-height: 18px;
+    width: 100%;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+
+.error {
+  width: 100%;
+  padding: 0;
+
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+
+  box-sizing: border-box;
+
+}
+
+
+.error.active {
+  padding: 0.3em;
+}
